  - "info" command for showing Atari HW and OS information
  - "symbols" command for loading and listing CPU & DSP code
    symbols/addresses and breaking on them.  Symbols are shown
    on CPU disassembly
  - debugger command and command argument TAB-completion support
    (requires readline library)
  - improved register name handling + fixed DSP reg name matching
  - CPU breakpoints can be given an optional count of how many hits
    there needs to be before they break into debugger.  If count
    of one is given, breakpoint is removed after hit
  - Display DSP instructions cycle timings in disasm mode (in cycles)

Other changes:
- Preliminary CMake build support


 Version 1.3.1 (2009-09-05):
 ---------------------------

This is only a bug fix release:
- GEMDOS HD emulation works together with ACSI HD image again
- Fix incorrect use of DESTDIR in python-ui installation
- Fix memdump/disasm in python-ui


 Version 1.3.0 (2009-08-16):
 ---------------------------

Emulation:
- Hugely improved DSP emulation:
  - Many more DSP using games/demos/apps work now
  - Preliminary sound support (e.g. most DSP based .MOD-playback works)
  - Better cycle counting / accuracy
  - Many speed improvements
- Major rewrite of the internal work/structures of video.c :
  - Allow to mix 50/60 Hz lines of 508/512 cycles and to keep correct
    video/cpu sync (fixes TCB in SNY, DI in MindBomb, TEX in Syntax Terror).
    This also adds support for dynamic calculation of HBL/Timer B positions
    when freq/res are changed (fixes SHFORSTV by Paulo Simoes)
  - Improved Timer B accuracy when starting it in a rare case
  - Handle end of line as well as start of line for Timer B
    in event count mode (using MFP's AER) (fixes Seven Gates Of Jambala)
  - Add another 'O byte' line method (fixes No Buddies Land)
  - Some more color alignment with the shifter when using movem.w/movem.l
    (for spectrum512 like images)
- Improved Blitter timings / cycles counting