@@ -14,7 +14,7 @@ extern int BreakCond_MatchCpu(void);
 extern int BreakCond_MatchDsp(void);
 extern int BreakCond_BreakPointCount(bool bForDsp);
 extern char *BreakCond_MatchVariable(const char *text, int state);
-extern bool BreakCond_Command(const char *expression, bool bForDsp);
+extern bool BreakCond_Command(char *expression, bool bForDsp);
 
 /* extra functions exported for the test code */
 extern void BreakCond_List(bool bForDsp);
