@@ -343,7 +343,7 @@ static int DebugDsp_BreakPoint(int nArgc, char *psArgs[])
  */
 static int DebugDsp_BreakCond(int nArgc, char *psArgs[])
 {
-	BreakCond_Command((const char *)psArgs[1], true);
+	BreakCond_Command(psArgs[1], true);
 	nDspActiveCBs = BreakCond_BreakPointCount(true);
 	return DEBUGGER_CMDDONE;
 }
@@ -421,11 +421,13 @@ static const dbgcommand_t dspcommands[] =
 	  false },
 	{ DebugDsp_BreakCond, "dspbreak", "db",
 	  "set/remove/list DSP register/RAM condition breakpoints",
-	  "[help | all | <breakpoint index> | <breakpoint condition>]\n"
+	  "[ help | all | <index> | <condition> [trace|once] ]\n"
 	  "\tSet breakpoint with given condition, remove breakpoint with\n"
 	  "\tgiven index or list all breakpoints when no args are given.\n"
-	  "\t'help' outputs breakpoint condition syntax help, 'all' removes\n"
-	  "\tall conditional breakpoints",
+	  "\tAdding 'trace' to end of condition causes breakpoint match\n"
+	  "\tjust to be printed, not break.  Adding 'once' will delete\n"
+	  "\tthe breakpoint after it's hit.  'help' outputs breakpoint\n"
+	  "\tcondition syntax help, 'all' removes all conditional breakpoints.",
 	  true },
 	{ DebugDsp_DisAsm, "dspdisasm", "dd",
 	  "disassemble DSP code",
